--- a/views/partials/navside.ejs
+++ b/views/partials/navside.ejs
@@ -71,6 +71,20 @@
                     </a><!--//nav-link-->
                 </li><!--//nav-item-->
 
+                <li class="nav-item">
+                    <!--//Bootstrap Icons: https://icons.getbootstrap.com/ -->
+                    <a class="nav-link" href="/settings">
+                         <span class="nav-link-text">Settings</span>
+                    </a><!--//nav-link-->
+                </li><!--//nav-item-->
+
+                <li class="nav-item">
+                    <!--//Bootstrap Icons: https://icons.getbootstrap.com/ -->
+                    <a class="nav-link" href="/auth/logout">
+                         <span class="nav-link-text">Logout</span>
+                    </a><!--//nav-link-->
+                </li><!--//nav-item-->
+
             </ul><!--//app-menu-->
         </nav><!--//app-nav-->
         
