--- a/views/rfscanner.ejs
+++ b/views/rfscanner.ejs
@@ -56,7 +56,9 @@
 	let lastTappedRFID = '';
 	let tapTimeout;
 	
-    document.addEventListener('DOMContentLoaded', (event) => {
+    document.addEventListener('DOMContentLoaded', () => {
+
+		console.log("document loaded");
 
 		const input = document.getElementById('rfId');
       	input.focus();
@@ -283,10 +285,15 @@
 		    </div><!--//col-->
 	    </div><!--//row-->
     </div><!--//container-->
-     					
-	
+     	
 
-    <%- include('./partials/footer.ejs') %>
+    
+	 
+    <!-- Javascript -->          
+    <script src="/plugins/popper.min.js"></script>
+    <script src="/plugins/bootstrap/js/bootstrap.min.js"></script>  
+
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
 </body>
 </html> 
