--- a/views/student_create.ejs
+++ b/views/student_create.ejs
@@ -31,10 +31,16 @@
               </div> -->
               <div class="col-12 col-md-8">
                 <div class="app-card app-card-settings shadow-sm p-4">
+
+                  <% if (info && info.length > 0) { %>
+                    <div class="mt-3">
+                        <p class="alert alert-info"><%= info %></p>
+                    </div>
+                <% } %>
             
                   <div class="app-card-body">
                     <form class="settings-form" method="post" action="/students/create" enctype="multipart/form-data">
-                      
+                      <input type="hidden" name="_csrf" value="<%= csrfToken %>"> <!-- Add CSRF token here -->
                       <div class="mb-3">
                         <label for="firstName" class="form-label">First Name</label>
                         <input type="text" class="form-control" id="firstName" value="" name="firstName" required>
