--- a/views/students.ejs
+++ b/views/students.ejs
@@ -17,6 +17,12 @@
 		    <div class="container-xl">
 			    
 			    <h1 class="app-page-title">Students</h1>
+
+          <% if (info && info.length > 0) { %>
+            <div class="mt-3">
+                <p class="alert alert-info"><%= info %></p>
+            </div>
+          <% } %>
 			    
 			    <a href="/students/new" class="btn btn-success btn-sm"> <i class="fa fa-plus"></i> Add New</a>
 			    <a href="/students/import" class="btn btn-warning btn-sm"> <i class="fa fa-arrow-up"></i> Import</a>
@@ -26,6 +32,9 @@
 
           <!-- Filter Form -->
           <form method="get" action="/students">
+
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>"> <!-- Add CSRF token here -->
+
             <div class="input-group mb-3">
                 <input type="text" name="idNumber" class="form-control" placeholder="Filter by ID Number" value="<%= idNumber %>">
                 <button class="btn btn-secondary" type="submit">Filter</button>
